--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <header>
                             <ul class="hypercons">
                                 <li class="email">
-                                    <a href="mailto:email@example.com"><img src="email.png"></a>
+                                    <a href="mailto:nihilationdev@gmail.com"><img src="email.png"></a>
                                 </li>
                                 <li class="github">
                                     <a rel="noopener" target="_blank" href="https://github.com/Nihilation/"><img src="github.png"></a>
