--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <div class="project-wrapper">
                                     <div>
                                         <li><a rel="noopener" target="_blank" href="https://github.com/Nihilation/todolist"><button class="btn-project">List w/ Auth & Reg</button></a></li>
-                                        <li><a rel="noopener" target="_blank" href="ue5.html"><button class="btn-project">UI & HUD base in Unreal Engine 5</button></a></li>
+                                        <li><a rel="noopener" href="ue5.html"><button class="btn-project">UI & HUD base in Unreal Engine 5</button></a></li>
                                         <li><a rel="noopener" target="_blank" href="https://github.com/Nihilation/tictactoe"><button class="btn-project">Tic-Tac-Toe Python</button></a></li>
                                         <li><a rel="noopener" target="_blank" href="https://github.com/Nihilation/weather-api"><button class="btn-project">Weather w/ API</button></a></li>
                                     </div>
